# youtube-downloader

./: .dockerignore  .env.docker  .env.example  Dockerfile  LICENSE  Makefile  README.md  db_config.py  docker-compose.yml  docker-entrypoint.sh  init_db.sql  main.py  pyproject.toml
app/: __init__.py
app/config/: settings.py
app/handlers/: __init__.py  admin.py  common.py  download.py
app/middlewares/: __init__.py  admin_middleware.py  auth_middleware.py  rate_limit_middleware.py
app/models/: __init__.py  download_history.py  user.py  video.py
app/services/: __init__.py  logger.py  user_service.py  youtube_service.py
migrations/models/: 0_20250620095502_init.py
